package anki.model.resources;

import anki.model.Note;

import java.util.ArrayList;

public class NotesBatch extends ArrayList<Note> {
}
