Í@startuml
'https://plantuml.com/class-diagram



package model {
    class Note {
        -tags : String
    }

    class Basic {
        -front : String
        -back : String
    }

    class Cloze {
        -text : String
        -backExtra : String
    }

    Basic --|> Note
    Cloze -|> Note

    package resources {
        class NotesBatch <<List<Note>>>{

        }
        NotesBatch --> Note
    }
}

package csv {
    package controller {
        class AnkiToCsvController {
            +exportNotesToCsv(notes : NotesBatch) : List<String>
        }
    }
    package mapping {
        class AnkiToCsvMapping {
            +mapTo(batch : NotesBatch) : Map<Class<T extends Note>, CsvFile>
        }

    }
    package model {
        class CsvFile {
            -records : List<CsvRecord>
            -name : String
        }
        class CsvRecord <<List<String>>>{
        }
        CsvFile -> CsvRecord
    }
    package export {
        class ExportService {
            +export(csv : CsvFile, destination : String) : String
        }
        ExportService ..> CsvFile
    }
}

AnkiToCsvMapping ..> NotesBatch
AnkiToCsvMapping .> CsvFile
AnkiToCsvController --> AnkiToCsvMapping
AnkiToCsvController -> ExportService

@enduml